--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,7 @@
     <packaging>war</packaging>
 
     <groupId>org.example</groupId>
-    <artifactId>OnlineCourseCatalog</artifactId>
-     <artifactId>maven-project</artifactId>
+    <artifactId>OnlineCourseCatalog</artifactId> <!-- Correct artifactId -->
     <version>1.0-SNAPSHOT</version>
 
     <properties>
